<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">(INEA)BITACORA MOBIL</string>
    <string name="hello_world">INICIAR SESIÓN</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bienvenido">bienvenido</string>
    <string name="inicio">BITACORA MOVIL</string>
    <string name="Bienvenido">REGISTRO DE ACTIVIDADES DEL EDUCANDO</string>
    <string name="id_usuario">ID REGISTRO: </string>
    <string name="user">NOMBRE:</string>
    <string name="password">APELLIDOS:</string>
    <string name="nombre">ACTIVIDAD A REALIZAR:</string>
    <string name="apellidop">NIVEL EDUCATIVO:</string>
    <string name="apellidom">MODULO:</string>
    <string name="alta">Guardar Registro</string>
    <string name="baja">Eliminar Registro</string>
    <string name="consulta">Buscar Registro</string>
    <string name="modificar">Modificar Registro</string>
    <string name="limpiar">Limpiar</string>
    <string name="ver">Registros</string>
    <string name="title_activity_registros">registros</string>
    <string name="intermedio">INTERMEDIO</string>
    <string name="avanzado">AVANZADO</string>
    <string name="inicial">INICIAL</string>
    <string name="fecha_apli">fecha</string>
    <string name="estudiar">ESTUDIAR</string>
    <string name="aplicarexamen">APLICAR EXAMEN</string>
    <string name="consultapersonal">CONSULTA PERSONAL</string>
    <string name="moduloe">Modulo</string>
    <string name="fecha">Fecha</string>

</resources>